--- a/weatherinsights-backend/src/main/resources/application.properties
+++ b/weatherinsights-backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/weatherdb?useSSL=false&serverT
 spring.datasource.username=kevin
 spring.datasource.password=kevin
 spring.jpa.hibernate.ddl-auto=update
-server.port=8081
+server.port=${PORT:8080}
 
 openweather.api.key=5b5307ba67466ed633cafc0601378d59
 openweather.url=https://api.openweathermap.org/data/2.5/weather
