--- a/weatherinsights-backend/src/main/resources/application.properties
+++ b/weatherinsights-backend/src/main/resources/application.properties
@@ -1,15 +1,16 @@
 spring.application.name=weather-insights-backend
 
-spring.datasource.url=${MYSQL_URL}
-spring.datasource.username=${MYSQLUSER}
-spring.datasource.password=${MYSQLPASSWORD}
+# Conexión a la base de datos usando la URL pública completa
+spring.datasource.url=${MYSQL_PUBLIC_URL}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# Puerto dinámico que asigna Railway
 server.port=${PORT:8080}
 
+# API de OpenWeather
 openweather.api.key=5b5307ba67466ed633cafc0601378d59
 openweather.url=https://api.openweathermap.org/data/2.5/weather
