--- a/weatherinsights-backend/src/main/resources/application.properties
+++ b/weatherinsights-backend/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 spring.application.name=weather-insights-backend
 
-spring.datasource.url=mysql://root:xfSvHLLfPlKDePuoMdVxcSkWBlKrEgFj@shuttle.proxy.rlwy.net:57557/weatherdb
+spring.datasource.url=jdbc:mysql://root:xfSvHLLfPlKDePuoMdVxcSkWBlKrEgFj@shuttle.proxy.rlwy.net:57557/weatherdb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+server.port=${PORT:8080}
+
 
 server.port=${PORT:8080}
 
