--- a/weatherinsights-backend/src/main/resources/application.properties
+++ b/weatherinsights-backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=weather-insights-backend
 
-spring.datasource.url=jdbc:mysql://root:xfSvHLLfPlKDePuoMdVxcSkWBlKrEgFj@shuttle.proxy.rlwy.net:57557/weatherdb
+spring.datasource.url=jdbc:mysql://root:OJPfzSJuMCTSdhERBCflpCZInzazyEPO@hopper.proxy.rlwy.net:47376/railway
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
