--- a/weatherinsights-backend/src/main/resources/application.properties
+++ b/weatherinsights-backend/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=weather-insights-backend
 
 spring.datasource.url=jdbc:mysql://root:OJPfzSJuMCTSdhERBCflpCZInzazyEPO@hopper.proxy.rlwy.net:47376/railway
+spring.datasource.username=<USER>
+spring.datasource.password=<PASSWORD>
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
