--- a/weatherinsights-backend/src/main/resources/application.properties
+++ b/weatherinsights-backend/src/main/resources/application.properties
@@ -1,18 +1,16 @@
-spring.application.name=weather-insights-backend
+spring.application.name=apiweather
 
-spring.datasource.url=jdbc:mysql://root:OJPfzSJuMCTSdhERBCflpCZInzazyEPO@hopper.proxy.rlwy.net:47376/railway
-spring.datasource.username=<USER>
-spring.datasource.password=<PASSWORD>
+# Conexión a MySQL en Railway
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}?useSSL=false&serverTimezone=UTC
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 server.port=${PORT:8080}
-
-
 
 # API de OpenWeather
 openweather.api.key=5b5307ba67466ed633cafc0601378d59
