--- a/weatherinsights-backend/src/main/resources/application.properties
+++ b/weatherinsights-backend/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 spring.application.name=apiweather
-spring.datasource.url=jdbc:mysql://localhost:3306/weatherdb?useSSL=false&serverTimezone=UTC
-spring.datasource.username=kevin
-spring.datasource.password=kevin
-spring.jpa.hibernate.ddl-auto=update
-server.port=8081
 
-openweather.api.key=5b5307ba67466ed633cafc0601378d59
-openweather.url=https://api.openweathermap.org/data/2.5/weather
+# Configuracion para Railway DB
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}?useSSL=false&serverTimezone=UTC
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
+
+spring.jpa.hibernate.ddl-auto=update
+
+# Puerto del servidor (Railway usa la variable PORT)
+server.port=${PORT:8081}
+
+# Configuracion de OpenWeather API
+openweathermap.api.key=${OPENWEATHER_API_KEY}
+openweathermap.url=https://api.openweathermap.org/data/2.5/weather
