--- a/weatherinsights-backend/src/main/resources/application.properties
+++ b/weatherinsights-backend/src/main/resources/application.properties
@@ -1,17 +1,15 @@
 spring.application.name=apiweather
 
-# Conexión a MySQL en Railway
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}?useSSL=false&serverTimezone=UTC
-spring.datasource.username=${MYSQL_USER}
-spring.datasource.password=${MYSQL_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Configuracion para Railway DB
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}?useSSL=false&serverTimezone=UTC
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-server.port=${PORT:8080}
+# Puerto del servidor (Railway usa la variable PORT)
+server.port=${PORT:8081}
 
-# API de OpenWeather
-openweather.api.key=5b5307ba67466ed633cafc0601378d59
-openweather.url=https://api.openweathermap.org/data/2.5/weather
+# Configuracion de OpenWeather API
+openweathermap.api.key=${OPENWEATHER_API_KEY}
+openweathermap.url=https://api.openweathermap.org/data/2.5/weather
